$Id: History,v 1.1 1999-01-07 16:05:51 gunter Exp $
--------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N03 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
 9-10-98 John Apostolakis
- This used to be example N02.  It is now N03.

25-02-98 Michel Maire
- add a macro 'newgeom.mac' which gives an example of
  interactive redefinition of the geometry
       
11-09-98 Michel Maire
- removed the function SetEmProcess() ( contained cin) 
  and the class ExN02PhysicsListMessenger
  
27-08-98  John Allison
- Removed /vis~/camera/zoom 3 - coworks with vis-00-02-05.

12-08-98  Michel Maire
- Changed all the class name:N02 -> ExN02. 
    
 9-08-98  John Allison
- Changed G4UIterminal to G4UIGAG.

20-07-98  Michel Maire
storeTrajectory command move to prerun.mac     

16-07-98  John Allison
- Changed /vis~/Draw... to /vis~/draw.

 9-07-98  John Allison
- Added G4VIS_USE_DAWNFILE and G4VIS_USE_OPENGLWIN32 to N02VisManager.cc.

8th July 1998  G.Cosmo
- Protected visualization code with G4VIS_USE.

6th July 1998  John Allison
- Simplified N02VisManager.

16th June 1998  Michel Maire
- Added G4_SOLVE_VIS_TEMPLATES to exampleN02.cc

10th June 1998  John Allison
- Added template instantiation requests to exampleN02.cc for GNU_GCC.

April 09, 98 G. Cosmo

- Created.