@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ExN03EventActionMessenger.cc,v 1.1 1999-01-07 16:05:57 gunter Exp $
+// $Id: ExN03EventActionMessenger.cc,v 1.2 1999-03-10 16:15:38 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -17,6 +17,7 @@
 
 #include "ExN03EventAction.hh"
 #include "G4UIcmdWithAString.hh"
+#include "G4UIcmdWithAnInteger.hh"
 #include "globals.hh"
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -31,6 +32,12 @@ ExN03EventActionMessenger::ExN03EventActionMessenger(ExN03EventAction* EvAct)
   DrawCmd->SetDefaultValue("charged");
   DrawCmd->SetCandidates("none charged all");
   DrawCmd->AvailableForStates(Idle);
+  
+  PrintCmd = new G4UIcmdWithAnInteger("/event/printModulo",this);
+  PrintCmd->SetGuidance("Print events modulo n");
+  PrintCmd->SetParameterName("EventNb",false);
+  PrintCmd->SetRange("EventNb>0");
+  PrintCmd->AvailableForStates(Idle);     
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -38,6 +45,7 @@ ExN03EventActionMessenger::ExN03EventActionMessenger(ExN03EventAction* EvAct)
 ExN03EventActionMessenger::~ExN03EventActionMessenger()
 {
   delete DrawCmd;
+  delete PrintCmd;   
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -46,7 +54,9 @@ void ExN03EventActionMessenger::SetNewValue(G4UIcommand * command,G4String newVa
 { 
   if(command == DrawCmd)
     {eventAction->SetDrawFlag(newValue);}
-   
+       
+  if(command == PrintCmd)
+    {eventAction->SetPrintModulo(PrintCmd->GetNewIntValue(newValue));}              
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
